2009-07-23  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tclNotify.c: Fix for [Bug 2820349].

2009-07-21  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Asia/Dhaka: 
	* library/tzdata/Indian/Mauritius: Olson's tzdata2009k.
	
2009-07-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (StringIsCmd): Reorganize so that [string is] is
	more efficient when parsing things that are correct, at a cost of
	making the empty string test slightly more costly. With this, the cost
	of doing [string is integer -strict $x] matches [catch {expr {$x+0}}]
	in the successful case, and greatly outstrips it in the failing case.

2009-07-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdIL.c:	Removed unused variables.
	* generic/tclCompile.c:
	* generic/tclVar.c:
	* unix/tclUnixChan.c:

	* generic/tclScan.c:	Typo in ACCEPT_NAN configuration.

	* generic/tclStrToD.c:	[Bug 2819200]: Set floating point control
	register on MIPS systems so that the gradual underflow expected by Tcl
	is in effect.  

2009-07-14  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c (DeleteInterpProc,TclArgumentBCEnter,
	(TclArgumentBCRelease, TclArgumentGet):
	* generic/tclCompile.c (EnterCmdWordIndex, TclCleanupByteCode,
	(TclInitCompileEnv, TclCompileScript):
	* generic/tclCompile.h (ExtCmdLoc): 
	* generic/tclExecute.c (TclExecuteByteCode):
	* generic/tclInt.h (ExtIndex, CFWordBC):
	* tests/info.test (info-39.0):

	Backport of some changes made to the Tcl head, to handle literal
	sharing better. The code here is much simpler (trimmed down) compared
	to the head as the 8.5 branch is not bytecode compiling whole files,
	and doesn't compile eval'd code either.
	
	Reworked the handling of literal command arguments in bytecode to be
	saved (compiler) and used (execution) per command (see the
	TCL_INVOKE_STK* instructions), and not per the whole bytecode.  This
	removes the problems with location data caused by literal sharing in